{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 118,
  "lineage": "e7e0469b-6d4c-280e-a66b-b4e871cfe6d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "group3_private1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0ed23644769460a80",
            "id": "rtb-0ed23644769460a80",
            "owner_id": "452983298586",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0737f8783d14169b0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "group3_private1"
            },
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_nat_gateway.group3_nat",
            "aws_vpc.group3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "group3_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-015fafa1798c44cd5",
            "domain": "vpc",
            "id": "eipalloc-00adbbde3ad8b8584",
            "network_interface": "eni-0952f260ba7d2b12c",
            "private_dns": "ip-10-0-2-207.ec2.internal",
            "private_ip": "10.0.2.207",
            "public_dns": "ec2-3-81-253-200.compute-1.amazonaws.com",
            "public_ip": "3.81.253.200",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "group3_app_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:452983298586:loadbalancer/group3-app-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "internal-group3-app-elb-1297216978.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "group3-app-elb",
            "idle_timeout": 400,
            "internal": true,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "TCP",
                "lb_port": 80,
                "lb_protocol": "TCP"
              }
            ],
            "name": "group3-app-elb",
            "security_groups": [
              "sg-0aae7784c2194cf64"
            ],
            "source_security_group": "452983298586/group3_app_sg",
            "source_security_group_id": "sg-0aae7784c2194cf64",
            "subnets": [
              "subnet-02de52e1038e4bac5",
              "subnet-07c727619c1804050"
            ],
            "tags": {
              "name": "group3_app_elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.group3_app_sg",
            "aws_subnet.group3_private3_subnet",
            "aws_subnet.group3_private4_subnet",
            "aws_vpc.group3_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "group3_web_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:452983298586:loadbalancer/group3-web-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "group3-web-elb-669594656.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "group3-web-elb",
            "idle_timeout": 3,
            "instances": [
              "i-0d424f957dd61887e"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "group3-web-elb",
            "security_groups": [
              "sg-0fb1546a9985264b1"
            ],
            "source_security_group": "452983298586/group3_web_sg",
            "source_security_group_id": "sg-0fb1546a9985264b1",
            "subnets": [
              "subnet-0aa8494c1ca0f7ad5",
              "subnet-0f3a08e168ce6f73e"
            ],
            "tags": {
              "name": "group3_web_elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.group3_web_sg",
            "aws_subnet.group3_private1_subnet",
            "aws_subnet.group3_private2_subnet",
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "group3_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:internet-gateway/igw-082b2a6aa0e1287c8",
            "id": "igw-082b2a6aa0e1287c8",
            "owner_id": "452983298586",
            "tags": {
              "Name": "group3_igw"
            },
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "group3_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00adbbde3ad8b8584",
            "id": "nat-0737f8783d14169b0",
            "network_interface_id": "eni-0952f260ba7d2b12c",
            "private_ip": "10.0.2.207",
            "public_ip": "3.81.253.200",
            "subnet_id": "subnet-093abe60d6d9035c3",
            "tags": {
              "Name": "group3_nat"
            }
          },
          "dependencies": [
            "aws_eip.group3_eip",
            "aws_subnet.group3_public2_subnet",
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "allowall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:network-acl/acl-0f36530f28c052907",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f36530f28c052907",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "452983298586",
            "subnet_ids": [],
            "tags": {},
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "group3_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08b83d61e6a06fdaa",
            "owner_id": "452983298586",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082b2a6aa0e1287c8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "group3_public"
            },
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_internet_gateway.group3_internet_gateway",
            "aws_vpc.group3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group3_private1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066f6601d199e1300",
            "route_table_id": "rtb-0ed23644769460a80",
            "subnet_id": "subnet-0aa8494c1ca0f7ad5"
          },
          "dependencies": [
            "aws_default_route_table.group3_private1_rt",
            "aws_nat_gateway.group3_nat",
            "aws_subnet.group3_private1_subnet",
            "aws_vpc.group3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group3_private2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012c7e599a4ed935b",
            "route_table_id": "rtb-0ed23644769460a80",
            "subnet_id": "subnet-0f3a08e168ce6f73e"
          },
          "dependencies": [
            "aws_default_route_table.group3_private1_rt",
            "aws_nat_gateway.group3_nat",
            "aws_subnet.group3_private2_subnet",
            "aws_vpc.group3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group3_private3_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07402a3596cfe16cb",
            "route_table_id": "rtb-0ed23644769460a80",
            "subnet_id": "subnet-02de52e1038e4bac5"
          },
          "dependencies": [
            "aws_default_route_table.group3_private2_rt",
            "aws_eip.group3_eip",
            "aws_nat_gateway.group3_nat",
            "aws_subnet.group3_private3_subnet",
            "aws_subnet.group3_public2_subnet",
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group3_private4_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9f6bbc3424ab7c3",
            "route_table_id": "rtb-0ed23644769460a80",
            "subnet_id": "subnet-07c727619c1804050"
          },
          "dependencies": [
            "aws_default_route_table.group3_private2_rt",
            "aws_eip.group3_eip",
            "aws_nat_gateway.group3_nat",
            "aws_subnet.group3_private4_subnet",
            "aws_subnet.group3_public2_subnet",
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group3_public1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc419351a10aafe2",
            "route_table_id": "rtb-08b83d61e6a06fdaa",
            "subnet_id": "subnet-00809687f58abb8a7"
          },
          "dependencies": [
            "aws_internet_gateway.group3_internet_gateway",
            "aws_route_table.group3_public_rt",
            "aws_subnet.group3_public1_subnet",
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group3_public2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c52291130725b26",
            "route_table_id": "rtb-08b83d61e6a06fdaa",
            "subnet_id": "subnet-093abe60d6d9035c3"
          },
          "dependencies": [
            "aws_internet_gateway.group3_internet_gateway",
            "aws_route_table.group3_public_rt",
            "aws_subnet.group3_public2_subnet",
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group3_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:security-group/sg-0aae7784c2194cf64",
            "description": "Used for frontend to backend comms",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aae7784c2194cf64",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "group3_app_sg",
            "name_prefix": "",
            "owner_id": "452983298586",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group3_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:security-group/sg-0df4fe37f1f98b28b",
            "description": "Used for RDS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df4fe37f1f98b28b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aae7784c2194cf64",
                  "sg-0fb1546a9985264b1"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "group3_rds_sg",
            "name_prefix": "",
            "owner_id": "452983298586",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_security_group.group3_app_sg",
            "aws_security_group.group3_web_sg",
            "aws_vpc.group3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group3_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:security-group/sg-0fb1546a9985264b1",
            "description": "Used by ELB for public access to web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb1546a9985264b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "group3_web_sg",
            "name_prefix": "",
            "owner_id": "452983298586",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group3_private1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:subnet/subnet-0aa8494c1ca0f7ad5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0aa8494c1ca0f7ad5",
            "map_public_ip_on_launch": false,
            "owner_id": "452983298586",
            "tags": {
              "Name": "group3_private1"
            },
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group3_private2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:subnet/subnet-0f3a08e168ce6f73e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0f3a08e168ce6f73e",
            "map_public_ip_on_launch": false,
            "owner_id": "452983298586",
            "tags": {
              "Name": "group3_private2"
            },
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group3_private3_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:subnet/subnet-02de52e1038e4bac5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-02de52e1038e4bac5",
            "map_public_ip_on_launch": false,
            "owner_id": "452983298586",
            "tags": {
              "Name": "group3_private3"
            },
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group3_private4_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:subnet/subnet-07c727619c1804050",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-07c727619c1804050",
            "map_public_ip_on_launch": false,
            "owner_id": "452983298586",
            "tags": {
              "Name": "group3_private4"
            },
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group3_public1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:subnet/subnet-00809687f58abb8a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00809687f58abb8a7",
            "map_public_ip_on_launch": true,
            "owner_id": "452983298586",
            "tags": {
              "Name": "group3_public1"
            },
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group3_public2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:subnet/subnet-093abe60d6d9035c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-093abe60d6d9035c3",
            "map_public_ip_on_launch": true,
            "owner_id": "452983298586",
            "tags": {
              "Name": "group3_public2"
            },
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group3_rds1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:subnet/subnet-0f0987b0d5e7ab6b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0f0987b0d5e7ab6b4",
            "map_public_ip_on_launch": false,
            "owner_id": "452983298586",
            "tags": {
              "Name": "group3_rds1"
            },
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group3_rds2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:subnet/subnet-06bbe89f1c22041a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-06bbe89f1c22041a7",
            "map_public_ip_on_launch": false,
            "owner_id": "452983298586",
            "tags": {
              "Name": "group3_rds2"
            },
            "vpc_id": "vpc-0192e830b9b702d54"
          },
          "dependencies": [
            "aws_vpc.group3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "group3_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452983298586:vpc/vpc-0192e830b9b702d54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce0ebd214a09a7c2",
            "default_route_table_id": "rtb-0ed23644769460a80",
            "default_security_group_id": "sg-0626d89db55ea98b7",
            "dhcp_options_id": "dopt-7aad0200",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0192e830b9b702d54",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ed23644769460a80",
            "owner_id": "452983298586",
            "tags": {
              "Name": "group3_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}